UptimeKuma/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime
  labels:
    app: uptime
    ver: "0.0.1"
    env: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      name: uptime
  template:
    metadata:
      labels:
        name: uptime
    spec:
      containers:
        - name: uptime
          image: louislam/uptime-kuma:1
          ports:
            - containerPort: 3001
          volumeMounts:
            - mountPath: /app/data
              name: uptime-storage
          resources:
            requests:
              memory: 500Mi
              cpu: 250m
      volumes:
        - name: uptime-storage
          persistentVolumeClaim:
            claimName: uptime-pvc
