UptimeKuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-svc
spec:
  ports:
    - name: web
      port: 3001
      targetPort: 3001

  selector:
    app: whoami-1
